API Additions / Login page correction Some comments added Changes to placeholder attendance page Style changes (Scrollbars for long tables...)

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     margin: 0px;
     height: 100%;
     background-color: rgb(228, 228, 228);
+    overflow: hidden;
 }
 
 #loginBox {
@@ -24,8 +25,9 @@ body {
     display: block;
     background-color: white;
     padding: 20px;
+    padding-top: 0px;
     margin: auto;
-    min-height: 85%;
+    height: 85%;
     width: 80%;
     font-family: 'Source Sans Pro', sans-serif;
 }
@@ -61,6 +63,11 @@ body {
     border: none;
     border-collapse: collapse;
     padding: 20px;
+}
+
+.resultsBox {
+    height: 90%;
+    overflow-y: auto;
 }
 
 #loginBox > p {
@@ -239,14 +246,12 @@ body {
 
 #userSearchResultsBox {
     width: 100%;
-    height: 70%;
-    max-height: 70%;
-    min-height: 70%;
-    overflow-x: auto;
+    height: 85%;
+    overflow-y: auto;
     position: relative;
 }
 
-#userSearchResultsBox table > thead > tr {
+.userMgmtBox table > thead > tr, .resultsBox table > thead > tr {
     top: 0;
     position: sticky;
 }
@@ -270,7 +275,7 @@ body {
 
 #attendanceBox {
     display: grid;
-    grid-template: 150px 150px 400px / auto auto;
+    grid-template: 80px 80px 150px 400px / auto auto;
     grid-gap: 10px;
     border: 1px solid black;
     padding: 10px;
@@ -280,6 +285,6 @@ body {
     border: 1px solid black;
 }
 
-#attendGridItem5 {
+#attendGridItem5, #attendGridItem6 {
     grid-column: 1 / 3;
 }
